snapshots/parsers/cst/type_statements/type_comprehensive_example.snap
---
source: src/parsers/cst/type_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: TypeStatement
      children:
        - kind: PublicKeyword
          text: Public
        - kind: Whitespace
          text: " "
        - kind: TypeKeyword
          text: Type
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: CustomerRecord
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: EndOfLineComment
          text: "' Identification"
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: CustomerID
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: LongKeyword
          text: Long
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: AccountNumber
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: StringKeyword
          text: String
        - kind: Whitespace
          text: " "
        - kind: MultiplicationOperator
          text: "*"
        - kind: Whitespace
          text: " "
        - kind: IntegerLiteral
          text: "20"
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: EndOfLineComment
          text: "' Personal Info"
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: FirstName
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: StringKeyword
          text: String
        - kind: Whitespace
          text: " "
        - kind: MultiplicationOperator
          text: "*"
        - kind: Whitespace
          text: " "
        - kind: IntegerLiteral
          text: "50"
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: LastName
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: StringKeyword
          text: String
        - kind: Whitespace
          text: " "
        - kind: MultiplicationOperator
          text: "*"
        - kind: Whitespace
          text: " "
        - kind: IntegerLiteral
          text: "50"
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: Email
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: StringKeyword
          text: String
        - kind: Whitespace
          text: " "
        - kind: MultiplicationOperator
          text: "*"
        - kind: Whitespace
          text: " "
        - kind: IntegerLiteral
          text: "100"
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: EndOfLineComment
          text: "' Financial Data"
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: Balance
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: CurrencyKeyword
          text: Currency
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: CreditLimit
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: CurrencyKeyword
          text: Currency
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: TransactionHistory
        - kind: LeftParenthesis
          text: (
        - kind: RightParenthesis
          text: )
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: VariantKeyword
          text: Variant
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: EndOfLineComment
          text: "' Metadata"
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: CreatedDate
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: DateKeyword
          text: Date
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: LastModified
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: DateKeyword
          text: Date
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: IsActive
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: BooleanKeyword
          text: Boolean
        - kind: Newline
          text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: TypeKeyword
          text: Type
        - kind: Newline
          text: "\n"
