snapshots/parsers/cst/type_statements/type_empty.snap
---
source: src/parsers/cst/type_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: TypeStatement
      children:
        - kind: TypeKeyword
          text: Type
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: EmptyType
        - kind: Newline
          text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: TypeKeyword
          text: Type
        - kind: Newline
          text: "\n"
